# software_updater

./: .gitignore  Cargo.toml  Makefile.toml  README.md  fleet.toml
.cargo/: config.toml
cli/: Cargo.toml  fleet.toml
cli/src/: main.rs
config/: Cargo.toml
config/src/: lib.rs
core/: Cargo.toml  build.rs  fleet.toml
core/src/: lib.rs
core/src/os/: linux.rs  mod.rs
core/src/os/linux/: arch.rs  deb.rs
gtk/: Cargo.toml
qt/: Cargo.toml
src/: lib.rs
src/os/: linux.rs  mod.rs
src/os/linux/: arch.rs
