[package]
name = "software_updater_core"
version = "0.1.0"
edition = "2021"
authors = ["tukanoidd <tukanoid@outlook.com>"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "software_updater_core"
path = "src/lib.rs"

[dependencies]
software_updater_config = { path = "../config" }

getset = "0.1.2"
derive_builder = "0.11.2"
eyre = "0.6.8"
which = "4.2.5"
cfg-if = "1.0.0"
log = "0.4.17"
runas = { git = "https://github.com/SonnyX/rust-runas" }
lazy_static = "1.4.0"
paste = "1.0.7"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
dirs = "4.0.0"

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
rexpect = "0.4.0"

[target.'cfg(target_os = "linux")'.dependencies]
os_info = { git = "https://www.github.com/tukanoidd/os_info" }

[build-dependencies]
dirs = "4.0.0"
serde = "1.0.137"
serde_json = "1.0.81"
software_updater_config = { path = "../config" }